cmake_minimum_required(VERSION 3.16)
project(1039I)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
include_directories(npl)
include_directories(hdr)
include_directories(nlohmann)

if(UNIX AND NOT APPLE)
   set(LINUX TRUE)
endif()

if (LINUX)
   # add_executable(dl-sniff src/dl-sniff.cpp)
   # target_link_libraries(dl-sniff -pthread)
endif()
        
add_executable(main src/main.cpp)
add_executable(pcap_sniff src/pcap_sniff.cpp)
add_executable(pcap-counter src/pcap-counter.cpp)
add_executable(pcap-flow-counter src/pcap-flow-counter.cpp)
target_link_libraries(pcap_sniff pcap)
target_link_libraries(pcap-counter pcap)
target_link_libraries(pcap-flow-counter pcap)
add_executable(nl-sniff src/nl-sniff.cpp)
add_executable(simpleUDPserver src/simpleUDPserver.cpp)
add_executable(simpleTCPserver src/simpleTCPserver.cpp)
add_executable(simpleTCP-mt-server src/simpleTCP-mt-server.cpp)
add_executable(simpleTCPclient src/simpleTCPclient.cpp)
add_executable(simpleUDPclient src/simpleUDPclient.cpp)
add_executable(UDProom src/UDProom.cpp)
add_executable(UDProom-server src/UDProom-server.cpp)
add_executable(simpleUDPclient-json src/simpleUDPclient-json.cpp)
add_executable(byteorder src/byteorder.cpp)
target_link_libraries(UDProom -pthread)
target_link_libraries(simpleTCP-mt-server -pthread)
target_link_libraries(pcap-flow-counter -pthread)

if (LINUX)
#    may need to uncomment if using not very last versions of gcc/clang compilers
#    target_compile_options(pcap_sniff PRIVATE -fconcepts)
#    target_compile_options(pcap-counter PRIVATE -fconcepts)
#    target_compile_options(pcap-flow-counter PRIVATE -fconcepts)
endif()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
